--- a/search/style.css
+++ b/search/style.css
@@ -65,10 +65,6 @@ input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
 }
 
-.awesomplete {
-  width: calc(100% - 110px);
-}
-
 #search,
 #button {
   height: 2em;
@@ -125,6 +121,80 @@ input:-webkit-autofill {
 
 #button .loading {
   visibility: hidden;
+}
+
+/* Awesomplete */
+
+[hidden] { display: none; }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+}
+
+div.awesomplete {
+  display: inline-block;
+  position: relative;
+  width: calc(100% - 110px);
+}
+
+div.awesomplete > input {
+  display: block;
+}
+
+div.awesomplete > ul {
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  min-width: 100%;
+  list-style: none;
+  padding: 0;
+  border-radius: 4px;
+  margin: .2em 0 0;
+  background: white;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
+  text-shadow: none;
+}
+
+div.awesomplete > ul[hidden],
+div.awesomplete > ul:empty {
+  display: none;
+}
+
+@supports (transform: scale(0)) {
+  div.awesomplete > ul {
+    transition: .3s cubic-bezier(.4,.2,.5,1.4);
+    transform-origin: 1.43em -.43em;
+  }
+
+  div.awesomplete > ul[hidden],
+  div.awesomplete > ul:empty {
+    opacity: 0;
+    transform: scale(0);
+    display: block;
+    transition-timing-function: ease;
+  }
+}
+
+div.awesomplete > ul > li {
+  position: relative;
+  padding: .4em .5em;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+div.awesomplete > ul > li[aria-selected="true"] {
+  background: #4185e1;
+  color: white;
+}
+
+div.awesomplete mark {
+  background: #ffff00;
+}
+
+div.awesomplete li[aria-selected="true"] mark {
+  background: #334;
+  color: inherit;
 }
 
 /* Grid */
