--- a/search/style.css
+++ b/search/style.css
@@ -37,6 +37,10 @@ footer {
   height: 100%;
 }
 
+footer a {
+  color: #fff;
+}
+
 .center {
   width: 100%;
   max-width: 840px;
@@ -91,8 +95,8 @@ input:-webkit-autofill {
   width: 110px;
   float: right;
   color: white;
-  background: #4185e1;
-  border: 2px solid #4185e1;
+  background: #4daa17;
+  border: 2px solid #4daa17;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   border-top-left-radius: 0;
@@ -123,8 +127,11 @@ input:-webkit-autofill {
   visibility: hidden;
 }
 
-/* Awesomplete */
+a {
+  color: #4daa17;
+}
 
+/* Awesomplete */
 [hidden] { display: none; }
 
 .visually-hidden {
@@ -184,7 +191,7 @@ div.awesomplete > ul > li {
 }
 
 div.awesomplete > ul > li[aria-selected="true"] {
-  background: #4185e1;
+  background: #4daa17;
   color: white;
 }
 
@@ -193,7 +200,7 @@ div.awesomplete mark {
 }
 
 div.awesomplete li[aria-selected="true"] mark {
-  background: #334;
+  background: #357610;
   color: inherit;
 }
 
