--- a/search/style.css
+++ b/search/style.css
@@ -29,10 +29,20 @@ header {
   box-shadow: 0 1px 4px rgba(0, 0, 0, .3)
 }
 
+header .home-button {
+  cursor: pointer;
+}
+
+header .logo {
+  height: 50px;
+  display: inline-block;
+  vertical-align: top;
+}
+
 header h1 {
   margin: 0;
   font-size: 1.5em;
-  cursor: pointer;
+  display: inline-block;
 }
 
 footer {
@@ -132,6 +142,12 @@ input:-webkit-autofill {
   margin-right: .2em;
 }
 
+.search-button img {
+  width: 18px;
+  vertical-align: bottom;
+  margin-left: 6px;
+}
+
 .app {
   background: #fff;
 }
@@ -142,6 +158,10 @@ input:-webkit-autofill {
 
 .info {
   padding-bottom: 4em;
+}
+
+.info h1 {
+  font-size: 2em;
 }
 
 /* Awesomplete */
