--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,8 +29,12 @@ header {
   box-shadow: 0 1px 4px rgba(0, 0, 0, .3)
 }
 
-header .home-button {
+header .home {
   cursor: pointer;
+}
+
+header .links {
+ float: right;
 }
 
 header .logo {
