--- a/views/shared/head.pug
+++ b/views/shared/head.pug
@@ -2,6 +2,6 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
 
-  title= title
+  title=title
 
-  link(rel='stylesheet' href='/css/styles.css')
+  link(rel='stylesheet' href='styles/main.css')
