Add route and initial page template for companies

--- a/views/company.pug
+++ b/views/company.pug
@@ -9,13 +9,9 @@ html
 
       include ./partials/header.pug
 
-      include ./partials/search.pug
-
-      section(class='center result-page')
+      section(class='center')
         article(class='info result')
-          h2 Something went terribly wrong. Release the kittens!
+          h1=name
+          p Test content
 
     include ./partials/footer.pug
-
-
-
