--- a/views/error.pug
+++ b/views/error.pug
@@ -9,9 +9,7 @@ html
 
       include ./partials/header.pug
 
-      include ./partials/search.pug
-
-      section(class='center result-page')
+      section(class='center')
         article(class='info result')
           h2 Something went terribly wrong. Release the kittens!
 
