--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,4 +1,4 @@
 header
   div(class='home')
-    img(class='logo' src='images/logo.svg')
+    img(class='logo' src='/images/logo.svg')
     h1 State-O
