--- a/views/partials/search.pug
+++ b/views/partials/search.pug
@@ -2,9 +2,9 @@ section(class='center search-page')
 
   h2=title
 
-  script(type='text/javascript' src='scripts/search.js')
-  script(type='text/javascript' src='scripts/utils.js')
-  script(type='text/javascript' src='libs/awesomplete/awesomplete.min.js')
+  script(type='text/javascript' src='/scripts/search.js')
+  script(type='text/javascript' src='/scripts/utils.js')
+  script(type='text/javascript' src='/libs/awesomplete/awesomplete.min.js')
 
   form
     fieldset
